agent-core/crates/eos-sandbox-api/tests/snapshots/schema_snapshot__exit_isolated_workspace_request.snap
---
source: crates/eos-sandbox-api/tests/schema_snapshot.rs
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "ExitIsolatedWorkspaceRequest",
  "description": "Exit an isolated workspace.",
  "type": "object",
  "required": [
    "caller"
  ],
  "properties": {
    "caller": {
      "description": "Caller identity for audit and routing.",
      "allOf": [
        {
          "$ref": "#/definitions/SandboxCaller"
        }
      ]
    },
    "description": {
      "description": "Human-readable operation description; falls back via [`Self::description_or`].",
      "default": "",
      "type": "string"
    },
    "grace_s": {
      "description": "Grace period in seconds before forcing teardown (defaults to `5.0`).",
      "default": 5.0,
      "type": "number",
      "format": "double"
    },
    "invocation_id": {
      "description": "Optional in-flight correlation id, reused by the transport when present.",
      "type": [
        "string",
        "null"
      ]
    }
  },
  "definitions": {
    "SandboxCaller": {
      "description": "Caller identity threaded onto every audit-aware request.\n\nThe four required ids (`agent_id`, `run_id`, `agent_run_id`, `task_id`) are always present even when empty; the rest are optional. `tool_id` is the only id stored already-typed (it is `Option`, omitted when unset). The Python `tool_name` field is removed (GC-sandbox-api-01): it was empty in production and the audit fallback uses the operation name.",
      "type": "object",
      "required": [
        "agent_id"
      ],
      "properties": {
        "agent_id": {
          "description": "Resolved agent identity. In production it is derived from `agent_run_id` (`agent_run_id.strip() or agent_name`, eos-tools source), so it frequently equals `agent_run_id` while staying a distinct field. eos-types owns no `AgentId` newtype, so this stays a raw `String`.",
          "type": "string"
        },
        "agent_run_id": {
          "description": "Agent-run id as a raw wire field (required-empty). Use [`Self::agent_run`] for the validated typed form.",
          "default": "",
          "type": "string"
        },
        "attempt_id": {
          "description": "Attempt id as a raw wire field (optional-empty). Use [`Self::attempt`].",
          "default": "",
          "type": "string"
        },
        "request_id": {
          "description": "Request id as a raw wire field (optional-empty). Use [`Self::request`].",
          "default": "",
          "type": "string"
        },
        "run_id": {
          "description": "Run id (required-empty compatibility field).",
          "default": "",
          "type": "string"
        },
        "task_id": {
          "description": "Task id as a raw wire field (required-empty). Use [`Self::task`].",
          "default": "",
          "type": "string"
        },
        "tool_id": {
          "description": "Tool-use id, stored already-typed; omitted from the wire when unset.",
          "type": [
            "string",
            "null"
          ]
        },
        "workflow_id": {
          "description": "Workflow id as a raw wire field (optional-empty). Use [`Self::workflow`].",
          "default": "",
          "type": "string"
        }
      }
    }
  }
}
